Avoid cutting the heading off if it breaks into too many rows.

--- a/src/scss/layouts/_home.scss
+++ b/src/scss/layouts/_home.scss
@@ -465,7 +465,6 @@
       background: $white;
       border-radius: 5px 5px 0 0;
       box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
-      height: 100px;
       padding-top: 0;
       padding-bottom: 0;
 
@@ -473,7 +472,7 @@
         content: '';
         display: inline-block;
         vertical-align: middle;
-        height: 100%;
+        height: 100px;
       }
 
       // Clear collapsing margin
